--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.2'
+
+
+
 	}
 }
 
@@ -14,6 +18,8 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.github.kt3k.coveralls' apply plugin: 'jacoco'
+
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -21,6 +27,13 @@ sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+}
+
+jacocoTestReport {
+	reports {
+		xml.enabled = true // coveralls plugin depends on xml format report
+		// html.enabled = true
+	}
 }
 
 
