--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ repositories {
 jacocoTestReport {
 	reports {
 		xml.enabled = true // coveralls plugin depends on xml format report
-		// html.enabled = true
+		html.enabled = true
 	}
 }
 
