--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,8 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'com.github.kt3k.coveralls' apply plugin: 'jacoco'
+apply plugin: 'com.github.kt3k.coveralls'
+apply plugin: 'jacoco'
 
 
 group = 'com.example'
