--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,10 @@ cache:
 # clean 후 Build (Build시 자동으로 test 수행)
 script: "./gradlew clean build"
 
+install:
+  - sudo nvm install v8.10.0
+  - sudo npm install -g firebase-tools
+
 after_success:
   - ./gradlew jacocoTestReport coveralls
+  - firebase deploy --token "$FIREBASE_TOKEN"
